--- a/style.css
+++ b/style.css
@@ -1,47 +1,254 @@
-/* COMMUN A TOUTES LES PAGES*/
+/*****************************/
+/* COMMUN A TOUTES LES PAGES */
+/*****************************/
+
+/* Text */
+h1, h2, h3, h4, h5, h6 {
+	margin: 1em 0 .5em 0; /* -> 6 */
+}
+
+h1, h2, h3{
+	font-family: Ubuntu, sans-serif;
+	font-weight: normal; /* -> 7 */
+}
+
+h1 {
+	font-size: 3em; /* -> 8 */
+}
+
+h2 {font-size: 1.8em;}
+h3 {font-size: 1.2em;}
+h4 {font-size: 1em;}
+
+a{
+    font-family: Ubuntu, sans-serif;
+}
+/*FIN Text*/
+
 body {
     margin: auto;
-    width: 1024px;
-    background-color: rgba(128, 128, 128, 0.55);
+    width: 90%;
+	min-width: 800px;
+	max-width: 2100px;
+	background-color: rgba(128, 128, 128, 0.55); 
 }
+
+
+/****************/
+/*   HEADER     */
+/****************/
 
 header {
     width: 100%;
-    height: 128px;
+    height: 230px;
+    text-align: right;
+	border:1px solid black;
+}
 
+header h1, header h2{
     text-align: center;
 }
 
-#menu{
+header img {
     float: left;
-    width: 200px;
-    margin-top: 20px;
-    margin-right: 10px;
+    width: 55px;
+    height: 55px;
+}
+
+
+
+/****************/
+/*    CONTENT   */
+/****************/
+
+#content {
+    text-align: center;
+}
+
+/* MENU */
+.menu_principal{
+    display: inline-block;
+    vertical-align: top;
     
+    width: 20%;
+    margin: 20px 10px 20px 0;
+    
+    text-align: left;
+	border:1px solid black;
+	border-radius: 10px;
+	box-shadow: 0 0 30px #888888;
+}
+
+.menu_principal h2{
+	text-align: center;
+}
+
+.menu_principal ul {
+}
+
+.menu_principal ul li{
+	margin-bottom: 10px;
+	position:relative;
+	left: -20px;
+	border-bottom: 2px black dotted;
+	list-style-type: none;
+}
+
+.menu_principal ul li a{
+	margin-left: 20px;
+}
+
+.menu_principal ul li a object{
+	margin-right: 20px;
+}
+
+
+
+.menu_secondaire{
+    display: inline-block;
+    vertical-align: top;
+    
+    width: 0%;
+    margin: 20px 0 30px 0;
+	
+	overflow: hidden;
+	text-align:center;
+	border:1px solid black;
+	border-radius: 10px;
+}
+
+.menu_secondaire ul li{
+	list-style-type: none;
+}
+
+#menu h2{
+    text-align: center;
+}
+/*FIN MENU*/
+
+
+#main{
+    display: inline-block;
+    vertical-align: top;
+    
+    min-height: 250px;
+	width: 50%;
+	overflow: hidden;
+	margin-top: 20px;
+    
+    text-align: left;
+	padding: 10px;
+	border:1px solid black;
+	border-radius: 10px;
+}
+
+#main .main-titre{
+    display: none;
+    
+	-webkit-transform: rotate(90deg);
+	o-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+    sand-transform: rotate(90deg);
 }
 
 .side {
-    float: right;
-    width: 200px;
-    margin-top: 20px;
-    margin-left: 10px;
+    display: inline-block;
+    vertical-align: top;
+    
+    width: 20%;
+	margin: 20px 0 30px 10px;
+    
+    text-align: left;
+	min-height: 200px;
+	border:1px solid black;
+	border-radius: 10px;
+	box-shadow: 0 0 30px #888888;
 
 }
 
+
+/****************/
+/*    FOOTER    */
+/****************/
 footer{
     width: 100%;
-    overflow: auto;
-    
+	border:1px solid black;
+}
+
+footer p{
+	display: inline-block;
+	width: 29%;
+	vertical-align: top;
+	
     text-align: center;
+	padding:5px;
 }
 
-/* ELEMENTS EVOLUTIF*/
-
-#main{
-    margin-top: 20px;
-    overflow: hidden;
-   
+footer p:nth-child(2){
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 }
 
-.side .rss{
+
+
+
+/****************************/
+/* 		 SearchForm 		*/
+/****************************/
+#searchform {
+    text-align: right;
+    display: inline;
+    
+    
+}
+#searchform form label,#searchform form input{
+    font-family: Ubuntu, sans-serif;
+    font-size:1.1em;
+    
+}
+
+#searchform form fieldset{
+    border:none;
+    padding: 0px;
+}
+
+#searchform input[type="text"]{
+margin: 0px -4px 0 -4px;
+display: inline-block;
+width:265px;
+height:35px;
+padding-left:10px;
+font-weight:bold;
+border:none;
+color:#cecece;
+text-shadow:0px 1px 0px #000;
+background:#1f2026;
+-webkit-box-shadow:0px 1px 1px #000 inset;
+   -moz-box-shadow:0px 1px 1px #000 inset;
+        box-shadow:0px 1px 1px #000 inset;
+-webkit-border-radius:5px 0px 0px 5px;
+   -moz-border-radius:5px 0px 0px 5px;
+        border-radius:5px 0px 0px 5px;
+}
+
+#searchform input[type="submit"]{
+margin: 0px;
+display: inline-block;
+width:120px;
+height:37px;
+
+color:white;
+font-weight:bold;
+border: none;
+
+-webkit-border-radius:0px 5px 5px 0px;
+   -moz-border-radius:0px 5px 5px 0px;
+        border-radius:0px 5px 5px 0px;
+background:#09c;
+}
+#searchform input[type="submit"]:hover{
+background:#343640;
+}.content {
+    text-align: center;
 }
