--- a/style.css
+++ b/style.css
@@ -6,21 +6,17 @@
 h1, h2, h3, h4, h5, h6 {
 	margin: 1em 0 .5em 0; /* -> 6 */
 }
-
 h1, h2, h3{
 	color: back;
 	font-family: Ubuntu, sans-serif;
 	font-weight: normal; /* -> 7 */
 }
-
 h1 {
 	font-size: 3em; /* -> 8 */
 }
-
 h2 {font-size: 1.8em;}
 h3 {font-size: 1.2em;}
 h4 {font-size: 1em;}
-
 a{
     font-family: Ubuntu, sans-serif;
 }
@@ -56,7 +52,6 @@ header .titre-asso{
 	position:absolute;
 	margin-left:50%;
 }
-
 header .logo{
 	position:absolute;
 	margin-top:80px;
@@ -82,46 +77,87 @@ header .logo{
     text-align: center;
 }
 #content .bloc-content{
-background: #CECEC2; /* Old browsers */
-
     display: inline-block;
     vertical-align: top;
-	box-shadow: 0 2px 2px #888888;
-	border-radius: 10px;
-	text-align: left;
 }
 
 /* MENU */
-.menu{  
+.menu{
+	position:relative;
+	z-index: 1;
     width: 20%;
-    margin: 20px 10px 30px 0;
-	background: none;
+    margin: 40px 10px 30px 0;
+	text-align: left;
 }
 .menu h2{
+	 box-shadow: 0 2px 2px #888888;
 	text-align: center;
+	border-radius: 10px 0 0 10px;
+	background: rgb(248,255,232); /* Old browsers */
+	padding:10px;
+	background: -moz-linear-gradient(top,  rgba(248,255,232,1) 0%, rgba(227,245,171,1) 33%, rgba(183,223,45,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(248,255,232,1)), color-stop(33%,rgba(227,245,171,1)), color-stop(100%,rgba(183,223,45,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#b7df2d',GradientType=0 ); /* IE6-9 */
 }
 .menu p{
-	margin-bottom: 10px;
-	border-bottom: 2px black dotted;
-	list-style-type: none;
+	padding: 10px 0 10px 0;
 }
+.menu p:nth-child(1){
+	color:red;
+}
+.menu p:nth-child(2){
+	color:blue;
+}
+.menu p:nth-child(3){
+	color:indigo;
+}
+
 .menu p a{
 	margin-left: 20px;
+	color: white;
+}	
 }
 .menu p object{
+	background:blue;
+	border-radius: 30px;
+	margin: 0 0 0 50px;
 	margin-right: 20px;
 }
 /*FIN MENU*/
 
+#content .center{
+	position:relative;
+	z-index: 0;
+	width: 50%;
+	padding: 20px 10% 10px 10%;
+	margin: 20px -10% 30px -10%;
+	text-align: center;
+	background: #CECEC2; /* Old browsers */
+	box-shadow: 0 2px 2px #888888;
+	border-radius: 10px;
+	text-align: left;
+}
+.center section{
+	vertical-align: top;
+	display: inline-block;
+}
+
 /*SOUS_PAGE*/
 .sous-page{
 	width: 0%;
-	margin: 20px 0 30px 0;
 	overflow: hidden;
-	
 	text-align:center;
+	box-shadow: 0 0 5px 5px #888;
+	border-radius: 20px;
+	margin:20px 30px 0 -30px;
 }
 .sous-page .fermeture-sous-page{
+	position:relative;
+	z-index:2;
 	float: right;
 	margin-right: 0px;
 	margin-top: 20px;
@@ -130,17 +166,14 @@ background: #CECEC2; /* Old browsers */
 }
 /*FIN SOUS_PAGE*/
 
-.main{   
-    min-height: 250px;
-	width: 50%;
+.main{
+    min-height: 390px;
 	overflow: hidden;
-	margin-top: 20px;
-    
-	padding: 10px;
+	width:98%;
+	border: 2px solid black;
 }
 .main .main-titre{
-    display: none;
-    
+    display: line;
 	-webkit-transform: rotate(90deg);
 	o-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
@@ -148,11 +181,15 @@ background: #CECEC2; /* Old browsers */
     sand-transform: rotate(90deg);
 }
 .side {
-   
+	position:relative;
+    z-index: 1;
     width: 20%;
-	margin: 20px 0 30px 10px;
-    
+	margin: 40px 0 30px 10px;
+	text-align: left;
 	min-height: 200px;
+	background: #CECEC2; /* Old browsers */
+	box-shadow: 0 2px 2px #888888;
+	border-radius: 10px;
 }
 
 
@@ -163,7 +200,6 @@ footer{
 	text-align: center;
 	margin-top:30px;
 	margin: auto;
-    width: 1024px;;
 }
 .footer-content{
 	
@@ -180,7 +216,7 @@ background: -ms-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 
 background: linear-gradient(to bottom,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 ); /* IE6-9 */
 
-border-radius: 60px;
+border-radius: 0 0 60px 60px;
 }
 .footer-content p{
 	display: inline-block;
