--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 /* COMMUN A TOUTES LES PAGES */
 /*****************************/
 
+*{
+	padding:0px;
+	margin:0px;
+}
+
 /* Text */
 h1, h2, h3, h4, h5, h6 {
 	margin: 1em 0 .5em 0; /* -> 6 */
@@ -24,6 +29,7 @@ a{
 
 body {
 	margin:  auto;
+	background: #CECEC2;
 }
 
 /****************/
@@ -82,17 +88,17 @@ header .logo{
 }
 
 /* MENU */
-.menu{
+.bloc-left{
 	position:relative;
 	z-index: 1;
     width: 20%;
     margin: 40px 10px 30px 0;
-	text-align: left;
+	text-align: right;
 }
-.menu h2{
+.bloc-left h2{
 	 box-shadow: 0 2px 2px #888888;
 	text-align: center;
-	border-radius: 10px 0 0 10px;
+	border-radius: 10px;
 	background: rgb(248,255,232); /* Old browsers */
 	padding:10px;
 	background: -moz-linear-gradient(top,  rgba(248,255,232,1) 0%, rgba(227,245,171,1) 33%, rgba(183,223,45,1) 100%); /* FF3.6+ */
@@ -103,40 +109,44 @@ header .logo{
 	background: linear-gradient(to bottom,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#b7df2d',GradientType=0 ); /* IE6-9 */
 }
+
+
+.menu a{
+	display:block;
+	height:65px;
+	margin-bottom:10px;
+	text-align:left;
+}
 .menu p{
-	padding: 10px 0 10px 0;
+	position:relative;
+	z-index:3;
+	vertical-align:middle;
+	display: inline-block;
+	color: black;
+	padding: 13px 10px 13px 15px;
+	border-radius: 0 10px 10px 0;
 }
-.menu p:nth-child(1){
-	color:red;
-}
-.menu p:nth-child(2){
-	color:blue;
-}
-.menu p:nth-child(3){
-	color:indigo;
+.menu a b{
+	position:relative;
+	z-index:4;
+	vertical-align:middle;
+	display: inline-block;
+	margin-right: -10px;
+	padding: 15px;
+	border-radius: 0 50% 50% 50%;
+	box-shadow: 0 2px 5px black;
 }
 
-.menu p a{
-	margin-left: 20px;
-	color: white;
-}	
-}
-.menu p object{
-	background:blue;
-	border-radius: 30px;
-	margin: 0 0 0 50px;
-	margin-right: 20px;
-}
 /*FIN MENU*/
 
-#content .center{
+#content .bloc-center{
 	position:relative;
 	z-index: 0;
 	width: 50%;
 	padding: 20px 10% 10px 10%;
 	margin: 20px -10% 30px -10%;
 	text-align: center;
-	background: #CECEC2; /* Old browsers */
+	background: white; /* Old browsers */
 	box-shadow: 0 2px 2px #888888;
 	border-radius: 10px;
 	text-align: left;
@@ -151,7 +161,7 @@ header .logo{
 	width: 0%;
 	overflow: hidden;
 	text-align:center;
-	box-shadow: 0 0 5px 5px #888;
+	box-shadow: 0 0 2px 2px #888;
 	border-radius: 20px;
 	margin:20px 30px 0 -30px;
 }
@@ -170,7 +180,6 @@ header .logo{
     min-height: 390px;
 	overflow: hidden;
 	width:98%;
-	border: 2px solid black;
 }
 .main .main-titre{
     display: line;
@@ -187,7 +196,7 @@ header .logo{
 	margin: 40px 0 30px 10px;
 	text-align: left;
 	min-height: 200px;
-	background: #CECEC2; /* Old browsers */
+	background: white; /* Old browsers */
 	box-shadow: 0 2px 2px #888888;
 	border-radius: 10px;
 }
@@ -226,10 +235,7 @@ border-radius: 0 0 60px 60px;
 	color: black;
 	padding:5px;
 }
-.footer-content p:nth-child(2){
-	border-left: 1px solid black;
-	border-right: 1px solid black;
-}
+
 
 /****************************/
 /* 		 SearchForm 		*/
@@ -301,4 +307,10 @@ background: -ms-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 
 background: linear-gradient(to bottom,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 ); /* IE6-9 */
 
+}
+/* ANIMATION */
+@keyframes moveMenu
+{
+	from{}
+	to{margin-left:0px;}
 }
