--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 *{
 	padding:0px;
 	margin:0px;
+	border: none;
 }
 
 /* Text */
@@ -87,7 +88,6 @@ header .logo{
     vertical-align: top;
 }
 
-/* MENU */
 .bloc-left{
 	position:relative;
 	z-index: 1;
@@ -95,8 +95,11 @@ header .logo{
     margin: 40px 10px 30px 0;
 	text-align: right;
 }
+
 .bloc-left h2{
-	 box-shadow: 0 2px 2px #888888;
+	position:relative;
+	z-index:6;
+	box-shadow: 0 4px 4px #888888;
 	text-align: center;
 	border-radius: 10px;
 	background: rgb(248,255,232); /* Old browsers */
@@ -110,14 +113,24 @@ header .logo{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#b7df2d',GradientType=0 ); /* IE6-9 */
 }
 
-
-.menu a{
+/* MENU */
+.onglets-content{
+	margin:auto;
+	width:75%;
+	position:relative;
+	z-index:5;
+	background: white;
+	padding: 20px;
+	margin-top:-18px;
+	box-shadow: 0 0 2px black;
+}
+nav a{
 	display:block;
 	height:65px;
 	margin-bottom:10px;
-	text-align:left;
+	text-align:center;
 }
-.menu p{
+nav a p{
 	position:relative;
 	z-index:3;
 	vertical-align:middle;
@@ -125,8 +138,9 @@ header .logo{
 	color: black;
 	padding: 13px 10px 13px 15px;
 	border-radius: 0 10px 10px 0;
+	font-family: Ubuntu, sans-serif;
 }
-.menu a b{
+nav a b{
 	position:relative;
 	z-index:4;
 	vertical-align:middle;
@@ -136,35 +150,38 @@ header .logo{
 	border-radius: 0 50% 50% 50%;
 	box-shadow: 0 2px 5px black;
 }
-
 /*FIN MENU*/
 
 #content .bloc-center{
 	position:relative;
 	z-index: 0;
-	width: 50%;
-	padding: 20px 10% 10px 10%;
+	width: 55%;
+	padding: 20px 11% 10px 11%;
 	margin: 20px -10% 30px -10%;
-	text-align: center;
 	background: white; /* Old browsers */
-	box-shadow: 0 2px 2px #888888;
-	border-radius: 10px;
-	text-align: left;
+	border-radius: 100px;
+	text-align: center;
 }
-.center section{
+
+.bloc-center section{
 	vertical-align: top;
 	display: inline-block;
 }
 
 /*SOUS_PAGE*/
 .sous-page{
+	position:relative;
+	z-index:10;
 	width: 0%;
 	overflow: hidden;
-	text-align:center;
-	box-shadow: 0 0 2px 2px #888;
-	border-radius: 20px;
-	margin:20px 30px 0 -30px;
+	text-align:left;
+	box-shadow: 5px 0 6px #888;
+	border-radius: 0 300px 300px 0;
+	margin:160px 30px 0 -70px;
+	padding: 10px 0;
+	
 }
+
 .sous-page .fermeture-sous-page{
 	position:relative;
 	z-index:2;
@@ -174,15 +191,18 @@ header .logo{
 	width: 40px;
 	height:40px;
 }
+
+.sous-page a{}
+
 /*FIN SOUS_PAGE*/
 
 .main{
+	text-align:left;
     min-height: 390px;
 	overflow: hidden;
 	width:98%;
 }
 .main .main-titre{
-    display: line;
 	-webkit-transform: rotate(90deg);
 	o-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
@@ -211,11 +231,8 @@ footer{
 	margin: auto;
 }
 .footer-content{
-	
-
-	
-	border-top:2px solid black;
-	border-bottom: 2px solid black;
+border-top:2px groove black;
+border-bottom: 2px groove black;
 background: rgb(229,230,150); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(229,230,150,1) 0%, rgba(209,211,96,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,230,150,1)), color-stop(100%,rgba(209,211,96,1))); /* Chrome,Safari4+ */
@@ -227,6 +244,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', end
 
 border-radius: 0 0 60px 60px;
 }
+
+
 .footer-content p{
 	display: inline-block;
 	width: 29%;
@@ -253,18 +272,22 @@ border-radius: 0 0 60px 60px;
 border:none;
 margin-right: -4px;
 display: inline-block;
+vertical-align: middle;
 width:265px;
-height:34px;
+height:37px;
 padding-left:10px;
 font-weight:bold;
 color:black;
+outline: none;
+
 -webkit-box-shadow:0px 1px 1px #000 inset;
    -moz-box-shadow:0px 1px 1px #000 inset;
         box-shadow:0px 1px 1px #000 inset;
 -webkit-border-radius:15px 0px 0px 15px;
    -moz-border-radius:15px 0px 0px 15px;
-   border-radius:15px 0px 0px 15px;
-		background: rgb(230,240,163); /* Old browsers */
+  	    border-radius:15px 0px 0px 15px;
+
+background: rgb(230,240,163); /* Old browsers */
 background: rgb(255,255,255); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
@@ -273,17 +296,17 @@ background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 
 background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-
 }
+
 #searchform input[type="submit"]{
 display: inline-block;
-vertical-align: top;
+vertical-align: middle;
 width:120px;
 height:37px;
 border:none;
 color:black;
 font-weight:bold;
-text-shadow:0px 1px 1px #000;
+border-left: 1px groove black;
 -webkit-border-radius:0 15px 15px 0;
    -moz-border-radius:0 15px 15px 0;
         border-radius:0 15px 15px 0;
