--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
+
 /*****************************/
 /* COMMUN A TOUTES LES PAGES */
 /*****************************/
-
 *{
 	padding:0px;
 	margin:0px;
@@ -49,33 +49,40 @@ body {
 header {
     text-align: center;
 	height: 360px;
-	width: 100%;
-	max-width: 2048px;
-	min-width: 1024px;
 	
 	background: url(img/background_gite.jpg), black;
-	background-size:1024px 768px;
 	background-repeat:no-repeat;
 	background-position:center;
 }
 .barre-top{
-	height: 30px;
+	height: 0px;
 }
 header .bloc-titre{
-	position:absolute;
-	margin-left:50%;
-	margin-top:10px;
-	left: -195px;
-	
+	display: inline-block;
+	vertical-align: top;
+	width: 320px;	
 }
-header .titre-asso{
-	width: 390px;
-	position: absolute;
+header .bloc-titre img{
+	overflow: hidden;
+	width: 320px;
+	height:200px;
+	position:relative;
+}
+header .titre-fond{
+	z-index: 20;
+}
+header .titre-anime{
+	z-index: 25;
+	bottom:200px;
 }
 header .bloc-logo{
-	position: absolute;
-	left: 11%;
-	margin-top:80px;
+	display: inline-block;
+	vertical-align: top;
+	width: 320px;
+	
+	position: relative;
+	top: 60px;
+	right: 60px; 
 }
 
 
@@ -92,18 +99,19 @@ header .bloc-logo{
 .bloc-left{
 	position:relative;
 	z-index: 1;
-    width: 20%;
-    margin: 40px 0 30px 0;
+    width: 15%;
+    min-width:220px;
+    margin: 40px 0px 30px 0px;
 	text-align: right;
 }
 .bloc-left h2{
 	position:relative;
 	z-index:6;
-	box-shadow: 0 4px 4px #888888;
+	box-shadow: 1px 4px 4px #888888;
 	text-align: center;
-	border-radius: 10px;
+	border-radius: 30px 0 0 30px;
 	background: rgb(248,255,232); /* Old browsers */
-	padding:10px;
+	padding:10px 0 10px 15%;
 	background: -moz-linear-gradient(top,  rgba(248,255,232,1) 0%, rgba(227,245,171,1) 33%, rgba(183,223,45,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(248,255,232,1)), color-stop(33%,rgba(227,245,171,1)), color-stop(100%,rgba(183,223,45,1))); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* Chrome10+,Safari5.1+ */
@@ -115,13 +123,14 @@ header .bloc-logo{
 
 /* MENU */
 .menu .onglets-content{
-	margin:auto;
-	width:75%;
+	margin-left:15%;
+	width:85%;
 	position:relative;
 	z-index:5;
 	background: white;
-	padding: 20px;
 	margin-top:-18px;
+	padding:20px 0 20px 0;
+	
 	box-shadow: 0 0 2px black;
 }
 
@@ -164,8 +173,6 @@ nav a b{
 	overflow: hidden;
 	text-align:left;
 	box-shadow: 5px 0 6px #888;
-	border-radius: 0 50% 50% 0;
-	margin:160px 16px 0 -16px;
 	padding: 10px 0;
 	background: white;
 	
@@ -178,7 +185,6 @@ nav a b{
 .bloc-center{
 	position:relative;
 	z-index: 0;
-	width: 55%;
 	margin: 50px 0 30px 0;
 	/*background: white; /* Old browsers */
 	border-radius: 100px;
@@ -196,17 +202,17 @@ nav a b{
 }
 .main .main-titre{
 	-webkit-transform: rotate(90deg);
-	o-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
 	-ms-transform: rotate(90deg);
-    sand-transform: rotate(90deg);
 }
 
 /* SIDEBAR */
 .side {
 	position:relative;
     z-index: 1;
-    width: 20%;
+    width: 15%;
+    min-width:220px;
 	margin: 40px 0 30px 0;
 	text-align: center;
 	min-height: 200px;
@@ -252,11 +258,15 @@ border-radius: 0 0 60px 60px;
 /*  SearchForm  */
 /****************/
 #searchform {
-	position: absolute;
-	right: 1%;
-	margin-top:260px;
-	width:400px;
-	height: 30px;
+	display: inline-block;
+	vertical-align: top;
+	text-align:left;
+	width:320px;
+	height: 37px;
+	
+	position:relative;
+	top:300px;
+	left: 0px;
 }
 #searchform form input{
     font-family: Ubuntu, sans-serif;
@@ -272,7 +282,7 @@ border:none;
 margin-right: -4px;
 display: inline-block;
 vertical-align: middle;
-width:265px;
+width:185px;
 height:37px;
 padding-left:10px;
 font-weight:bold;
@@ -334,13 +344,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', end
 /* Mini-GALERIE */
 /***********/
 #mini-galerie{
-		width:200px;
+		width:150px;
 		overflow:hidden;
 		display: inline-block;
 }
 #mini-galerie #demoWrap{
 position:relative;
-width:400px;
+width:300px;
 height:300px;
 }
 #mini-galerie #demoWrap a.ancre{
@@ -358,7 +368,7 @@ display:none;
 position:relative;
 float:left;
 text-align:center;
-width:200px;
+width:150px;
 height:310px;
 padding:30px 0 0 0;
 list-style:none;
@@ -367,9 +377,9 @@ list-style:none;
 position:absolute;
 z-index:100;
 height:10px;
-width:64px;
+width:48px;
 top:10px;
-left:100px;
+left:50px;
 }
 #mini-galerie #demoWrap #liens ul li{
 position:relative;
@@ -417,7 +427,7 @@ background:        linear-gradient(transparent,rgba(0,0,0,1)),#888;
 margin-left:0px;
 }
 #mini-galerie #demoWrap #wrap2:target ~ #imgs{
-margin-left:-200px;
+margin-left:-150px;
 }
 #mini-galerie #demoWrap #liens ul li:nth-child(1) a,
 #mini-galerie #demoWrap #wrap1:target ~ #liens ul li a[href="#wrap1"],
