--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-
 /*****************************/
 /* COMMUN A TOUTES LES PAGES */
 /*****************************/
+
 *{
 	padding:0px;
 	margin:0px;
@@ -133,7 +133,6 @@ header .bloc-logo{
 	
 	box-shadow: 0 0 2px black;
 }
-
 nav h2{
 	margin-top: 0;
 }
@@ -167,8 +166,6 @@ nav a b{
 
 /* SOUS-PAGE*/
 .sous-page{
-	position:relative;
-	z-index:10;
 	width: 0%;
 	overflow: hidden;
 	text-align:left;
@@ -183,11 +180,8 @@ nav a b{
 
 /* CONTENT */
 .bloc-center{
-	position:relative;
-	z-index: 0;
 	margin: 50px 0 30px 0;
 	/*background: white; /* Old browsers */
-	border-radius: 100px;
 	text-align: center;
 }
 .bloc-center > section{
@@ -209,8 +203,6 @@ nav a b{
 
 /* SIDEBAR */
 .side {
-	position:relative;
-    z-index: 1;
     width: 15%;
     min-width:220px;
 	margin: 40px 0 30px 0;
@@ -220,7 +212,9 @@ nav a b{
 	box-shadow: 0 2px 2px #888888;
 	border-radius: 10px;
 }
-
+.side > section{
+	margin-bottom:20px;
+}
 
 /****************/
 /*    FOOTER    */
@@ -252,7 +246,6 @@ border-radius: 0 0 60px 60px;
 	color: black;
 	padding:5px;
 }
-
 
 /****************/
 /*  SearchForm  */
@@ -340,11 +333,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', end
 
 }
 
-/***********/
-/* Mini-GALERIE */
-/***********/
+/******************/
+/*  Mini-GALERIE  */
+/******************/
 #mini-galerie{
 		width:150px;
+		height:150px;
 		overflow:hidden;
 		display: inline-block;
 }
@@ -465,6 +459,7 @@ margin-left:-150px;
 	-webkit-transform: rotate(-90deg); 
 	-moz-transform: rotate(-90deg);			
 }
+
 /**********/
 /*  POST  */
 /**********/
@@ -495,6 +490,7 @@ margin-left:-150px;
 	color: white;
 	width: 120px;
 }
+
 /*************/
 /*  Galerie  */
 /*************/
@@ -510,6 +506,7 @@ margin-left:-150px;
 .gallery_box li:last-of-type{
 	border-bottom: 1px dotted black;
 }
+
 /******************/
 /*  Presentation  */
 /******************/
@@ -532,8 +529,3 @@ margin-left:-150px;
 /***************/
 /*  ANIMATION  */
 /***************/
-@keyframes moveMenu
-{
-	from{}
-	to{margin-left:0px;}
-}
