--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ h1 {
 	padding: 10px;
 	color: black; 
 }
-.main ul{
-	margin-left: 35px;
+.main ul li{
+	padding-left: -45px;
+	margin-left: 45px;
 }
 h2 {font-size: 1.8em;}
 h3 {font-size: 1.2em;}
@@ -98,13 +99,14 @@ header .bloc-logo{
 }
 .bloc-left{
 	position:relative;
-	z-index: 1;
+	z-index: 2;
     width: 15%;
     min-width:220px;
     margin: 40px 0px 30px 0px;
-	text-align: right;
+	text-align: center;
 }
 .bloc-left h2{
+	margin:0px;
 	position:relative;
 	z-index:6;
 	box-shadow: 1px 4px 4px #888888;
@@ -120,9 +122,12 @@ header .bloc-logo{
 	background: linear-gradient(to bottom,  rgba(248,255,232,1) 0%,rgba(227,245,171,1) 33%,rgba(183,223,45,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#b7df2d',GradientType=0 ); /* IE6-9 */
 }
-
+.bloc-left .partenaires p{
+	display:inline-block;
+	margin: 5px;
+}
 /* MENU */
-.menu .onglets-content{
+.bloc-left .onglets-content{
 	margin-left:15%;
 	width:85%;
 	position:relative;
@@ -141,6 +146,9 @@ nav a{
 	height:65px;
 	margin-bottom:20px;
 	text-align:center;
+}
+nav a:first-of-type{
+	margin-top:15px;
 }
 nav a p{
 	position:relative;
@@ -166,6 +174,8 @@ nav a b{
 
 /* SOUS-PAGE*/
 .sous-page{
+	position:relative;
+	z-index:1;
 	width: 0%;
 	overflow: hidden;
 	text-align:left;
@@ -180,8 +190,13 @@ nav a b{
 
 /* CONTENT */
 .bloc-center{
-	margin: 50px 0 30px 0;
-	/*background: white; /* Old browsers */
+	/*
+	margin: 10px -10% 10px -10%;
+	padding: 30px 10% 30px 10%;
+	background: black;
+	border-radius: 50px 50px 0 0;
+	*/
+	margin: 40px 0 40px 0;
 	text-align: center;
 }
 .bloc-center > section{
@@ -240,9 +255,7 @@ border-radius: 0 0 60px 60px;
 }
 .footer-content p{
 	display: inline-block;
-	width: 29%;
 	vertical-align: top;
-	
 	color: black;
 	padding:5px;
 }
@@ -465,7 +478,6 @@ margin-left:-150px;
 /**********/
 .post{
 	min-height: 150px;
-	border: 4px solid #2d9500;
 	padding: 10px;
 	margin-bottom: 50px;
 	background: white;
@@ -473,13 +485,13 @@ margin-left:-150px;
 }
 
 .info{
+	opacity: 0.75;
 	color: white;
 	float:right;
 	padding: 7px; 
 	background: rgb(143,200,0);
 	border-radius: 50% 50% 50% 0;
 }
-
 .post .more-link{
 	display: block;
 	padding: 10px 10px 5px 10px;
@@ -494,12 +506,6 @@ margin-left:-150px;
 /*************/
 /*  Galerie  */
 /*************/
-.gallery-template{
-	border: 4px solid #d11001;
-}
-.gallery-info{
-	background: #F23021;
-}
 .gallery_box li{
 	border-top: 1px dotted black;
 }
