--- a/style.css
+++ b/style.css
@@ -531,7 +531,22 @@ margin-left:-150px;
 	width: 200px;
 	height: 200px;
 } 
-
+/***********/
+/*  FORUM  */
+/***********/
+#bbpress-forums input, #bbpress-forums button{
+	opacity:0.8;
+	padding: 2px 6px 2px 6px;
+	border-radius: 10px;
+	outline: none;
+}
+#bbpress-forums input:hover, #bbpress-forums button:hover{
+	opacity: 1;
+}
+.bbp-topic-form{
+	padding: 20px;
+	border: 1px dotted black;
+}
 /***************/
 /*  ANIMATION  */
 /***************/
