--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ header {
     text-align: center;
 	height: 300px;
 	
-	background: url(img/background_gite.jpg), black;
-	background-position:center;
+	background: url(img/background_gite.jpg)no-repeat, black;
+	background-position: center top;
 }
+
 .barre-top{
 	height: 0px;
 }
@@ -205,7 +206,7 @@ nav a b{
 	width:95%;
 }
 
-.main-title, .main-title a{
+.main h2, .main h2 a{
 	font-family: Lucida Handwriting;
 	text-decoration:none;
 	padding: 10px;
@@ -218,6 +219,7 @@ nav a b{
 
 /* SIDEBAR */
 .side {
+  
     width: 15%;
     min-width:220px;
 	margin: 40px 0 30px 0;
@@ -238,26 +240,33 @@ footer{
 	text-align: center;
 	margin-top:30px;
 	margin: auto;
+	min-height:468px; 
+	
+	background: url(img/background_gite.jpg) no-repeat, black;
+	background-position: center bottom;
 }
-.footer-content{
-border-top:2px groove black;
-border-bottom: 2px groove black;
-background: rgb(229,230,150); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(229,230,150,1) 0%, rgba(209,211,96,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,230,150,1)), color-stop(100%,rgba(209,211,96,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 ); /* IE6-9 */
 
-border-radius: 0 0 60px 60px;
-}
-.footer-content p{
+.footer-content{
 	display: inline-block;
 	vertical-align: top;
+	
+	margin-top: 20px;
+	background: white;	
+	padding-top:80px;
+	width: 300px;
+	height:220px;
+	border-radius: 50%;
+	box-shadow: 1px 1px 12px 5px #555;
+}
+.footer-content p{
 	color: black;
-	padding:5px;
+}
+footer .actions-site{
+	float:left;
+	position:relative;
+	left:50%;
+	top:19px;
+	
 }
 
 /****************/
@@ -271,8 +280,8 @@ border-radius: 0 0 60px 60px;
 	height: 37px;
 	
 	position:relative;
-	top:200px;
-	left: 0px;
+	top:250px;
+	left: 130px;
 }
 #searchform form input{
     font-family: Ubuntu, sans-serif;
@@ -470,7 +479,9 @@ margin-left:-150px;
 	right:5px; 
 	top:15px;
 	-webkit-transform: rotate(-90deg); 
-	-moz-transform: rotate(-90deg);			
+	-moz-transform: rotate(-90deg);	
+	-ms-transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);		
 }
 
 /**********/
