--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ nav a b{
 	vertical-align: top;
 	display: inline-block;
 }
-.main{
+.main{position: relative;z-index:0;
 	text-align:left;
     min-height: 390px;
 	overflow: hidden;
@@ -235,7 +235,10 @@ nav a b{
 	border-radius: 10px;
 }
 .side > section{
-	margin-bottom:20px;
+	margin-bottom:60px;
+}
+.side > section li{
+	list-style-type: none; 
 }
 
 /****************/
@@ -536,6 +539,7 @@ margin-left:-150px;
 	min-height: 400px;
 	background: white;
 	padding: 10px;
+	min-height: 450px;
 }
 .presentation h2{
 	text-align:center;
@@ -545,7 +549,7 @@ margin-left:-150px;
 	float: left;
 	margin-right: 10px;
 	width: 200px;
-	height: 200px;
+	height: 300px;
 } 
 /***********/
 /*  FORUM  */
@@ -573,9 +577,14 @@ margin-left:-150px;
 .contact-left, .contact-right{
 	padding:30px;
 	float: left;
+	width: 40%;
 }
 .contact-left{
 	border-right: 1px dotted black;
+}
+.contact-right iframe{
+	width: 110%;
+	height: 350px;
 }
 
 /****************/
