--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 /*****************************/
 /* COMMUN A TOUTES LES PAGES */
 /*****************************/
+@media screen and (max-width: 1440px) {
+	header {
+		
+		background: url(img/background_gite_810p.jpg)no-repeat, black;
+	}
+	footer{
+		min-height:510px; 
+		background: url(img/background_gite_810p.jpg) no-repeat, black;
+	}
+}
+@media screen and (min-width: 1440px) {
+	header {
+		background: url(img/background_gite.jpg)no-repeat, black;
+	}
+	footer{
+		min-height:780px; 
+		background: url(img/background_gite.jpg) no-repeat, black;
+	}
+}
+
 
 *{
 	padding:0px;
@@ -25,11 +45,12 @@ h3 {font-size: 1.2em;}
 h4 {font-size: 1em;}
 a{font-family: Ubuntu, sans-serif;}
 
+
 body {
-	margin:  auto;
+		margin:  auto;
 	background: #CECEC2;
 	min-width: 1024px;
-	max-width: 2048px;
+	max-width: 1920px;
 }
 
 .text-icon img, .text-icon span{
@@ -41,11 +62,9 @@ body {
 /*   HEADER     */
 /****************/
 header {
-    text-align: center;
-	height: 300px;
-	
-	background: url(img/background_gite.jpg)no-repeat, black;
+   	text-align: center;
 	background-position: center top;
+	height: 300px;
 }
 
 .barre-top{
@@ -58,7 +77,7 @@ header .bloc-titre{
 	
 	position: relative;
 	top:40px;
-	right: 160px;
+	right: 260px;
 }
 header .bloc-titre img{
 	overflow: hidden;
@@ -80,7 +99,7 @@ header .bloc-logo{
 	
 	position: relative;
 	top: 60px;
-	right: 120px; 
+	right: 200px; 
 }
 /***************/
 /*  PAGE-NAME  */
@@ -95,7 +114,7 @@ header .bloc-logo{
     text-align: center;
 }
 .bloc-content{
-    display: inline-block;
+	display: inline-block;
     vertical-align: top;
 }
 .bloc-left{
@@ -173,11 +192,14 @@ nav a b{
 	box-shadow: 0 2px 5px black;
 }
 
-/* SOUS-PAGE*/
-.sous-page{
+/* SOUS-MENU*/
+.sous-menu{
 	position:relative;
+	top: 60px;
+	right:25px;
+	border-radius: 0 50% 50% 0;
 	z-index:1;
-	width: 0%;
+	width: 0px;
 	overflow: hidden;
 	text-align:left;
 	box-shadow: 5px 0 6px #888;
@@ -185,30 +207,23 @@ nav a b{
 	background: white;
 	
 }
-.sous-page .menu-secondaire{
+.sous-menu .menu-secondaire{
 	padding: 50px 0 50px 0;
 }
 
 /* CONTENT */
 .bloc-center{
-	/*
-	margin: 10px -10% 10px -10%;
-	padding: 30px 10% 30px 10%;
-	background: black;
-	border-radius: 50px 50px 0 0;
-	*/
 	margin: 40px 0 40px 0;
-	text-align: center;
 }
-.bloc-center > section{
-	vertical-align: top;
-	display: inline-block;
-}
-.main{position: relative;z-index:0;
+.main{
+	
+	position: relative;
+	z-index:0;
 	text-align:left;
     min-height: 390px;
+    bottom: 500px;
 	overflow: hidden;
-	width:95%;
+	margin: 0 10px;
 }
 
 .main h2, .main h2 a{
@@ -240,6 +255,9 @@ nav a b{
 .side > section li{
 	list-style-type: none; 
 }
+#meta{
+	padding: 2px;
+}
 
 /****************/
 /*    FOOTER    */
@@ -248,9 +266,6 @@ footer{
 	text-align: center;
 	margin-top:30px;
 	margin: auto;
-	min-height:468px; 
-	
-	background: url(img/background_gite.jpg) no-repeat, black;
 	background-position: center bottom;
 }
 
@@ -289,7 +304,7 @@ footer .actions-site{
 	
 	position:relative;
 	top:250px;
-	left: 130px;
+	left: 30px;
 }
 #searchform form input{
     font-family: Ubuntu, sans-serif;
