--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a{font-family: Ubuntu, sans-serif;}
 body {
 		margin:  auto;
 	background: #CECEC2;
-	min-width: 1024px;
+	min-width: 970px;
 	max-width: 1920px;
 }
 
@@ -114,6 +114,7 @@ header .bloc-logo{
     text-align: center;
 }
 .bloc-content{
+	visibility: hidden;
 	display: inline-block;
     vertical-align: top;
 }
@@ -221,9 +222,9 @@ nav a b{
 	z-index:0;
 	text-align:left;
     min-height: 390px;
-    bottom: 500px;
+    top: -500px;
 	overflow: hidden;
-	margin: 0 10px;
+	margin: 0 10px -500px 10px;
 }
 
 .main h2, .main h2 a{
@@ -250,7 +251,7 @@ nav a b{
 	border-radius: 10px;
 }
 .side > section{
-	margin-bottom:60px;
+	margin-bottom:30px;
 }
 .side > section li{
 	list-style-type: none; 
@@ -264,8 +265,6 @@ nav a b{
 /****************/
 footer{
 	text-align: center;
-	margin-top:30px;
-	margin: auto;
 	background-position: center bottom;
 }
 
@@ -304,7 +303,7 @@ footer .actions-site{
 	
 	position:relative;
 	top:250px;
-	left: 30px;
+	left: 10px;
 }
 #searchform form input{
     font-family: Ubuntu, sans-serif;
